Se cambio la imagen principal para ver si se soluciona el problema de la imagen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Footer from "../components/Footer.astro";
 	.ImagenPrincipal{
 		max-width: 100dvw;
 		height: 100dvh;
-		background: url('Imagen/ImagenPrincipal.jpg'); 
+		background: url('Imagen/2.jpg'); 
 		object-fit: cover;
 		background-repeat: no-repeat;
 		background-size: cover;
