--- a/src/components/Main/ServiciosAsesoramiento.astro
+++ b/src/components/Main/ServiciosAsesoramiento.astro
@@ -94,6 +94,19 @@
             width: 355px;
         }
     }
+    @media  (min-width: 992px) and (max-width:1199px){
+        .Grupos{
+            flex-wrap: wrap
+        }
+        .Grupos div{
+            width: 49%;
+            align-items: start;
+        }
+        .Grupos div a {
+            width: 100%;
+            align-items: start;
+        }
+    }
     .Grupos .Header{
         display: flex;
         flex-direction: row;
@@ -143,6 +156,11 @@
             width: 355px;
         }
     }
+    @media  (min-width: 992px) and (max-width:1199px){
+        .Grupos .Header img{
+            width: 440px;
+        }
+    }
     .Grupos p{
         width: 250px;
         color: #000;
@@ -152,6 +170,11 @@
         line-height: normal;
     }
     @media (max-width: 480px) {
+        .Grupos p{
+            width: 100%;
+        }
+    }
+    @media (min-width: 992px) and (max-width:1199px) {
         .Grupos p{
             width: 100%;
         }
