--- a/src/components/Main/ContenedorImagen.astro
+++ b/src/components/Main/ContenedorImagen.astro
@@ -44,6 +44,17 @@
             flex-wrap: wrap;
         }
     }
+    @media (min-width: 992px) and (max-width:1199px){
+        .ContenedorImagenes{
+            flex-wrap: wrap;
+        }
+    }
+    @media (min-width: 1200px){
+        .ContenedorImagenes{
+            gap: 5px;
+            justify-content: space-evenly;
+        }
+    }
     .ContenedorImagenes div.Arriba , .ContenedorImagenes div.Abajo{     
         padding-bottom: 10px; 
         width: 100%;
@@ -65,6 +76,16 @@
             opacity: 100%;
         }
     }
+    @media (min-width: 992px) and (max-width:1199px){
+        .Imagenes{
+            max-width: 399px;
+            max-height: 412px;
+            opacity: 100%;
+        }
+        .ContenedorImagenes div.Arriba , .ContenedorImagenes div.Abajo{
+            justify-content: space-evenly;
+        }
+    }
     .Imagenes img{
         width: 100%; 
         height: 100%;
@@ -81,6 +102,17 @@
         border-radius: 0px 60px 0px 0px;
     }
     @media (max-width: 480px){
+        .ContenedorImagenes div div div.Imagenes{
+            border-radius: 0px;
+        }
+        div.Arriba div:last-child div.Imagenes{
+            border-radius: 0px 60px 0px 0px;
+        }
+        div.Abajo div:first-child div.Imagenes{
+            border-radius: 0px 0px 0px 60px;
+        }
+    }
+    @media (min-width: 992px) and (max-width:1199px){
         .ContenedorImagenes div div div.Imagenes{
             border-radius: 0px;
         }
