se corrigieron algunos errores dentro del responsive en distintas resoluciones

--- a/src/components/Main/ServiciosAsesoramiento.astro
+++ b/src/components/Main/ServiciosAsesoramiento.astro
@@ -94,7 +94,7 @@
             width: 355px;
         }
     }
-    @media  (min-width: 992px) and (max-width:1199px){
+    @media  (min-width: 768px) and (max-width:1199px){
         .Grupos{
             flex-wrap: wrap
         }
@@ -156,9 +156,12 @@
             width: 355px;
         }
     }
-    @media  (min-width: 992px) and (max-width:1199px){
+    @media  (min-width: 768px) and (max-width:1199px){
+        .Grupos .Header{
+            width: 100%;
+        }
         .Grupos .Header img{
-            width: 440px;
+            width: 90%;
         }
     }
     .Grupos p{
@@ -174,7 +177,7 @@
             width: 100%;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px) {
+    @media (min-width: 768px) and (max-width:1199px) {
         .Grupos p{
             width: 100%;
         }
