--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,8 @@ import Footer from "../components/Footer.astro";
 			font-size: 36px;
 		}
 	}
-	@media (min-width: 992px) and (max-width:1199px){
+	/* min-width: 768px and max-width:991px */
+	@media (min-width: 768px) and (max-width:1199px){
 		.ImagenPrincipal{
 			justify-content: start;
 		}
