--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -144,6 +144,7 @@
     .Informacion{
         display: flex;
         max-width: 1270px;
+        width: 100%;
         height: 100%;
         justify-content: center;
         align-items: center;
@@ -159,6 +160,7 @@
     .Datos{
         display: flex;
         width: 568px;
+        width: 50%;
         height: 428px;
         flex-direction: column;
         justify-content: center;
@@ -174,6 +176,7 @@
     }
     .RedesSociales{
         width: 635px;
+        width: 50%;
         height: 201.75px;
         flex-shrink: 0;
         display: flex;
