--- a/src/components/Main/Inspirate.astro
+++ b/src/components/Main/Inspirate.astro
@@ -41,7 +41,6 @@
         flex-wrap: wrap;
     }
     .ImagenesInspirate img{
-        max-width: 316px;
         width: 316px;
         height: 285px;
         object-fit: cover;
@@ -54,7 +53,7 @@
             display: none;
         }
     }
-    @media  (min-width: 992px) and (max-width:1199px) {
+    @media  (min-width: 768px) and (max-width:1199px) {
         .ImagenesInspirate img{
             width: 50%;
         }
@@ -64,13 +63,12 @@
     }
     @media (min-width: 1200px) and (max-width: 1399px){
         .ImagenesInspirate img{
-            width: 304px;
+            width: 25%;
         }
     }
     .GaleriaInspirate{
         background-color: #1D1414;
         color: #F7F7F7;
-        max-width: 316px;
         width: 316px;
         height: 285px;
         display: flex;
@@ -85,14 +83,14 @@
             height: 125px;
         }
     }
-    @media(min-width: 992px) and (max-width:1199px){
+    @media(min-width: 768px) and (max-width:1199px){
         .GaleriaInspirate{
             width: 100%;
         }
     }
     @media (min-width: 1200px) and (max-width: 1399px){
         .GaleriaInspirate{
-            width: 304px;
+            width: 25%;
         }
     }
     .GaleriaInspirate h4{
