--- a/src/components/Main/PinturaTendencia.astro
+++ b/src/components/Main/PinturaTendencia.astro
@@ -63,7 +63,7 @@
             max-height: 454px;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px) {
+    @media (min-width: 768px) and (max-width:1199px) {
         .PinturaTendencia{
            max-height: 100%;
         }
@@ -76,7 +76,7 @@
             flex-direction: column;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px){
+    @media (min-width: 768px) and (max-width:1199px){
         .Carrusel{
             flex-direction: column;
         }
@@ -98,9 +98,9 @@
             justify-content: center;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px) {
+    @media (min-width: 768px) and (max-width:1199px) {
         .Carrusel div{
-            width: 961px;
+            width: 100%;
             height: 70px;
             justify-content: center;
         }
@@ -129,7 +129,7 @@
             padding: 0 0 0 15px;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px) {
+    @media (min-width: 768px) and (max-width:1199px) {
         .Carrusel div h4{
             -webkit-transform: rotate(0); 
             -moz-transform: rotate(0);
@@ -155,7 +155,7 @@
             text-align: left;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px){
+    @media (min-width: 768px) and (max-width:1199px){
         .Carrusel div.Activo h4{
             width: 100%;
             margin: 0 auto;
@@ -185,11 +185,12 @@
             align-items: center;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px){
+    @media (min-width: 768px) and (max-width:1199px){
         .Carrusel div.Activo{
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
+            width: 100%;
         }
     }
     @media (min-width: 1200px){
@@ -214,7 +215,7 @@
             margin: 0 auto 22px auto;
         }
     }
-    @media (min-width: 992px) and (max-width:1199px){
+    @media (min-width: 768px) and (max-width:1199px){
         .Carrusel div.Activo img{
             width: 95%;
             height: 75%;
