--- a/src/pages/colores.astro
+++ b/src/pages/colores.astro
@@ -21,7 +21,8 @@ import Footer from "../components/Footer.astro";
 		--opacidad-negro: 0.5;
     	background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url("Imagen/2.jpg");
 		max-width: 100dvw;
-		height: 50dvh;
+		max-height: 100dvh;
+		height: 30%;
 		object-fit: cover;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -35,9 +36,10 @@ import Footer from "../components/Footer.astro";
 		text-align: center;
 		flex-shrink: 0;
 		color: #F7F7F7;
-		font-size: 64px;
+		font-size: 48px;
 		font-style: normal;
 		font-weight: 300;
 		line-height: normal;
+		margin: 0;
 	}
 </style>
