--- a/src/components/Painters/PainterLeft.astro
+++ b/src/components/Painters/PainterLeft.astro
@@ -17,13 +17,15 @@
 </div>
 <style>
     .DatosPintor{
-        width: 1262px;
+        max-width: 1262px;
+        width: 95%;
         height: 500px;
         margin: 30px auto;
         position: relative;
     }
     img{
-        width: 430px;
+        max-width: 430px;
+        width: 100%;
         height: 498px;
         border: 1px solid #000;
         object-fit: cover;
@@ -32,14 +34,35 @@
         right: 0;
     }
     .Datos{
-        width: 932px;
-        height: 350px;
+        max-width: 932px;
+        width: 100%;
+        max-height: 350px;
+        height: 65%;
         background-color: #14161D;
         position: absolute;
-        bottom: 60px;
-        left: 0px;
-        border-radius: 5px 5px 5px 100px;
+        bottom: 0px;
+        right: 0px;
+        /* bottom: 60px;
+        left: 0px; */
+        /* border-radius: 5px 5px 5px 100px; */
         background: #14161D;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        opacity: 65%;
+    }
+    @media (min-width: 768px) and (max-width:1199px) {
+        .Datos{
+            bottom: 10px;
+            right: 0px; 
+            border-radius: 5px 5px 5px 100px;
+            opacity: 70%;
+        }
+    }
+    @media (min-width:1200px) {
+        .Datos{
+            bottom: 60px;
+            right: 300px; 
+            border-radius: 5px 5px 5px 100px;
+            opacity: 70%;
+        }
     }
 </style>
