--- a/src/pages/pintores.astro
+++ b/src/pages/pintores.astro
@@ -77,7 +77,8 @@ const DatosPintores = [
     }
     p{
         margin: 0 auto;
-        width: 840px;
+        max-width: 840px;
+        width: 95%;
         font-size: 20px;
     }
     .Descripcion , h2{
