se agrego el responsive de la pagina de nosotros

--- a/src/components/Nosotros/DataContainer.astro
+++ b/src/components/Nosotros/DataContainer.astro
@@ -65,19 +65,21 @@ const { DatosLocal } = Astro.props;
         position: absolute;
         font-style: normal;
         line-height: normal;
-        top: 40px;
-        left: 50px;
+        top: 20px;
+        left: 20px;
+        /* top: 40px;
+        left: 50px; */
     }
     h2,h3{
         margin: 0;
     }
     h2{
         font-weight: 700;
-        font-size: 32px;
+        font-size: 24px;
         text-transform: uppercase;
     }
     h3{
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 300;
     }
     .RedesSociales{
@@ -101,7 +103,7 @@ const { DatosLocal } = Astro.props;
         padding-left: 10px;
     }
     .InfoLocal {
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 300;
         padding-top: 30px;
         display: flex;
