--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -70,20 +70,22 @@ const DatosLocales = [
     h2{
         text-align: center;
         font-size: 64px;
-        margin: 100px 0;
     }
     p{
         margin: 0 auto;
         width: 840px;
-        font-size: 20px;
+        width: 95%;
+        font-size: 24px;
     }
     .Descripcion , h2{
         color: #000;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
+        margin: 40px auto;
     }
     .Descripcion{
         margin-bottom: 50px;
+        width: 95%;
     }
 </style>
