--- a/src/components/BarraNavegacionMain.astro
+++ b/src/components/BarraNavegacionMain.astro
@@ -12,7 +12,7 @@
 		<ul>
 			<li><a href="/colores">Colores</a></li>
 			<li><a href="/pintores">Pintores</a></li>
-			<li><a href="/inspirate">Inspirate</a></li>
+			<!-- <li><a href="/inspirate">Inspirate</a></li> -->
 			<li><a href="/nosotros">Nosotros</a></li>
 			<li><a href="/contactanos">Contactanos</a></li>
 		</ul>
