se agrego el responsive de la pagina de contactanos

--- a/src/pages/contactanos.astro
+++ b/src/pages/contactanos.astro
@@ -56,12 +56,12 @@ import Footer from "../components/Footer.astro";
         font-weight: 300;
         line-height: normal;
         text-align: center;
-        font-size: 64px;
-        margin: 100px 0;
+        font-size: 54px;
+        margin: 100px 0 40px 0;
     }
     h3{
         color: #000;
-        font-size: 40px;
+        font-size: 32px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
@@ -76,7 +76,8 @@ import Footer from "../components/Footer.astro";
         margin: 40px;
     }
     form{
-        width: 781px;
+        max-width: 781px;
+        width: 95%;
         height: 793px;
         margin: 0 auto;
     }
@@ -89,7 +90,8 @@ import Footer from "../components/Footer.astro";
         padding: 5px;
     }
     input ,textarea{
-        width: 771px;
+        max-width: 771px;
+        width: 95%;
         height: 50px;
         border-radius: 10px;
         border: 1px solid #000;
@@ -103,7 +105,8 @@ import Footer from "../components/Footer.astro";
     input[type=submit]{
         color: white;
         height: 50px;
-        width: 778px;
+        max-width: 778px;
+        width: 95%;
         background: #14161D;
         padding: 0;
     }
