se retoco el footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -96,6 +96,7 @@
         background: #1D1414;
         border: none;
         border-bottom: 1px solid #F7F7F7;
+        color: #F7F7F7;
     }
     form input:placeholder-shown{
         color: #F7F7F7;
@@ -193,11 +194,11 @@
         }
     }
     .RedesSociales h3{
-        font-size: 40px;
+        font-size: 32px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
-        text-decoration-line: underline;
+        /* text-decoration-line: underline; */
     }
     @media (max-width: 480px){
         .RedesSociales h3{
